// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Header renders a column icon if provided 1`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr
        data-rbd-droppable-context-id="2"
        data-rbd-droppable-id="columns"
      >
        <th
          aria-describedby="rbd-hidden-text-2-hidden-text-6"
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-1howxi1-MuiTableCell-root"
          data-rbd-drag-handle-context-id="2"
          data-rbd-drag-handle-draggable-id="test"
          data-rbd-draggable-context-id="2"
          data-rbd-draggable-id="test"
          draggable="false"
          role="columnheader"
          tabindex="0"
        >
          <div
            style="overflow: hidden; flex: 1;"
          >
            <div
              aria-label="test header"
              class="MuiBox-root css-k008qs"
            >
              <div
                class="MuiBox-root css-12z0wuy"
              >
                <div>
                  Icon
                </div>
              </div>
              <div
                class="MuiBox-root css-0"
              >
                <span
                  class="MuiButtonBase-root MuiTableSortLabel-root css-1qgma8u-MuiButtonBase-root-MuiTableSortLabel-root"
                  data-testid="sort test"
                  role="button"
                  tabindex="0"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-ukcrwb-MuiTypography-root"
                  >
                    Test
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-1vweko9-MuiSvgIcon-root-MuiTableSortLabel-icon"
                    data-testid="ArrowDownwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
          <div
            style="display: flex; flex-direction: row; width: 40px; justify-content: space-between;"
          >
            <div
              aria-label="close test"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1pmilg0-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </div>
            <div
              style="cursor: col-resize;"
            >
              <hr
                class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-ck7sc0-MuiDivider-root"
              />
            </div>
          </div>
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`Data Header renders correctly with sort but no filter 1`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr
        data-rbd-droppable-context-id="1"
        data-rbd-droppable-id="columns"
      >
        <th
          aria-describedby="rbd-hidden-text-1-hidden-text-3"
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-1howxi1-MuiTableCell-root"
          data-rbd-drag-handle-context-id="1"
          data-rbd-drag-handle-draggable-id="test"
          data-rbd-draggable-context-id="1"
          data-rbd-draggable-id="test"
          draggable="false"
          role="columnheader"
          tabindex="0"
        >
          <div
            style="overflow: hidden; flex: 1;"
          >
            <div
              aria-label="test header"
              class="MuiBox-root css-k008qs"
            >
              <div
                class="MuiBox-root css-12z0wuy"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="FeedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V8l-5-5zM7 7h5v2H7V7zm10 10H7v-2h10v2zm0-4H7v-2h10v2zm-2-4V5l4 4h-4z"
                  />
                </svg>
              </div>
              <div
                class="MuiBox-root css-0"
              >
                <span
                  class="MuiButtonBase-root MuiTableSortLabel-root css-1qgma8u-MuiButtonBase-root-MuiTableSortLabel-root"
                  data-testid="sort test"
                  role="button"
                  tabindex="0"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-ukcrwb-MuiTypography-root"
                  >
                    Test
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-1vweko9-MuiSvgIcon-root-MuiTableSortLabel-icon"
                    data-testid="ArrowDownwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
          <div
            style="display: flex; flex-direction: row; width: 40px; justify-content: space-between;"
          >
            <div
              aria-label="close test"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1pmilg0-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </div>
            <div
              style="cursor: col-resize;"
            >
              <hr
                class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-ck7sc0-MuiDivider-root"
              />
            </div>
          </div>
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`Data Header renders correctly without sort or filter 1`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr
        data-rbd-droppable-context-id="0"
        data-rbd-droppable-id="columns"
      >
        <th
          aria-describedby="rbd-hidden-text-0-hidden-text-0"
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-1howxi1-MuiTableCell-root"
          data-rbd-drag-handle-context-id="0"
          data-rbd-drag-handle-draggable-id="test"
          data-rbd-draggable-context-id="0"
          data-rbd-draggable-id="test"
          draggable="false"
          role="columnheader"
          tabindex="0"
        >
          <div
            style="overflow: hidden; flex: 1;"
          >
            <div
              aria-label="test header"
              class="MuiBox-root css-k008qs"
            >
              <div
                class="MuiBox-root css-12z0wuy"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="FeedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V8l-5-5zM7 7h5v2H7V7zm10 10H7v-2h10v2zm0-4H7v-2h10v2zm-2-4V5l4 4h-4z"
                  />
                </svg>
              </div>
              <div
                class="MuiBox-root css-0"
              >
                <div>
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-xw0cpc-MuiTypography-root"
                  >
                    Test
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            style="display: flex; flex-direction: row; width: 40px; justify-content: space-between;"
          >
            <div
              aria-label="close test"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1pmilg0-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </div>
            <div
              style="cursor: col-resize;"
            >
              <hr
                class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-ck7sc0-MuiDivider-root"
              />
            </div>
          </div>
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;
